Let user go to full stop page from nearby's departures list. Wrap nearby stops in scrollview

--- a/src/pages/nearby/nearby.scss
+++ b/src/pages/nearby/nearby.scss
@@ -3,6 +3,8 @@ page-nearby {
     // border-style: solid;
     // border-color: blue;
     transition: all 2s ease-in-out;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
   .pointer {
     cursor: pointer;
